fix: adjust slide title font size for improved readability

--- a/assets/css/modules/slideshow.css
+++ b/assets/css/modules/slideshow.css
@@ -169,7 +169,7 @@ p.category {
 
 .slide-title {
     color: var(--accent);
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin-bottom: 0.5rem;
     font-weight: 300;
     text-align: center;
